# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflow/: github-action.yml
.github/workflows/: github-actions-demo.yml
gendiff/: cli.py  generate.py  parser.py
gendiff/scripts/: gendiff.py
hexlet_code/: generate.py
hexlet_code/scripts/: gendiff.py
tests/: test_generate.py
tests/fixtures/: file3.yml  right_answer3.txt
