[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Zak <yes.its.me.zak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff ="hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
